- Create coveragerc and add to gitignore - Update .travis.yml for pytest with coverage - Update requirements.txt for pytest-cov - Update tests to cover 100%

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = social_network.settings
 python_files = test*.py *_tests.py
+
+[flake8]
+exclude = */migrations/*, manage.py, conftest.py
