--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+coverage==4.5.4
 Django==2.2.4
 entrypoints==0.3
 flake8==3.7.8
@@ -7,6 +8,7 @@ importlib-metadata==0.19
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.1
+Pillow==6.1.0
 pkg-resources==0.0.0
 pluggy==0.12.0
 py==1.8.0
@@ -14,6 +16,7 @@ pycodestyle==2.5.0
 pyflakes==2.1.1
 pyparsing==2.4.2
 pytest==5.0.1
+pytest-cov==2.7.1
 pytest-django==3.5.1
 pytz==2019.2
 six==1.12.0
