--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: xenial
 language: python
 python:
- - "3.6"
+- '3.6'
 install: pip install -r requirements.txt
 script: pytest -v --cov . --cov-report term-missing --cov-fail-under=98
+before_install:
+- openssl aes-256-cbc -K $encrypted_a65d797d744d_key -iv $encrypted_a65d797d744d_iv
+  -in aws3.pem.enc -out ~\/Downloads/aws3.pem -d
