--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,27 @@
+asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==19.1.0
+bcrypt==3.1.7
+cffi==1.12.3
 coverage==4.5.4
+cryptography==2.7
 Django==2.2.4
 entrypoints==0.3
+fabric==2.5.0
 flake8==3.7.8
 importlib-metadata==0.19
+invoke==1.3.0
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.1
+paramiko==2.6.0
 Pillow==6.1.0
 pluggy==0.12.0
 py==1.8.0
 pycodestyle==2.5.0
+pycparser==2.19
 pyflakes==2.1.1
+PyNaCl==1.3.0
 pyparsing==2.4.2
 pytest==5.0.1
 pytest-cov==2.7.1
