Updated test for register view Updated flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,5 @@ DJANGO_SETTINGS_MODULE = social_network.settings
 python_files = test*.py *_tests.py
 
 [flake8]
-exclude = */migrations/*, manage.py, conftest.py
+max-line-length=119
+include=*/admin.py, */models.py
