--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ bcrypt==3.1.7
 cffi==1.12.3
 coverage==4.5.4
 cryptography==2.7
+cssselect==1.1.0
 Django==2.2.4
 entrypoints==0.3
 fabric==2.5.0
 flake8==3.7.8
 importlib-metadata==0.19
 invoke==1.3.0
+lxml==4.4.1
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.1
@@ -26,6 +28,7 @@ pyparsing==2.4.2
 pytest==5.0.1
 pytest-cov==2.7.1
 pytest-django==3.5.1
+pytest-flake8==1.0.4
 pytz==2019.2
 six==1.12.0
 sqlparse==0.3.0
