--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
 - '3.6'
 install: pip install -r requirements.txt
-script: pytest -v --cov . --cov-report term-missing --cov-fail-under=100
+script: pytest -v --cov . --cov-report term-missing --cov-fail-under=100 --flake8
 deploy:
   provider: script
   script: fab -i aws3.pem -H ubuntu@13.48.78.197 deploy
