Update Profile model using AbstractUser; Update templates for some features; Add url on profile for detailed information; Add form using external instal requirements; Update tests;

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,19 @@ asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==19.1.0
 bcrypt==3.1.7
+certifi==2019.9.11
 cffi==1.12.3
+chardet==3.0.4
+codecov==2.0.15
 coverage==4.5.4
 cryptography==2.7
 cssselect==1.1.0
 Django==2.2.4
+django-crispy-forms==1.7.2
 entrypoints==0.3
 fabric==2.5.0
 flake8==3.7.8
+idna==2.8
 importlib-metadata==0.19
 invoke==1.3.0
 lxml==4.4.1
@@ -30,7 +35,9 @@ pytest-cov==2.7.1
 pytest-django==3.5.1
 pytest-flake8==1.0.4
 pytz==2019.2
+requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.3
 wcwidth==0.1.7
 zipp==0.5.2
